; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_fd_find_client_and_lock.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_fd_find_client_and_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.necp_client = type { i32 }
%struct.necp_fd_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.necp_client* (%struct.necp_fd_data*, i32)* @necp_client_fd_find_client_and_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.necp_client* @necp_client_fd_find_client_and_lock(%struct.necp_fd_data* %0, i32 %1) #0 {
  %3 = alloca %struct.necp_fd_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.necp_client*, align 8
  store %struct.necp_fd_data* %0, %struct.necp_fd_data** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.necp_fd_data*, %struct.necp_fd_data** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.necp_client* @necp_client_fd_find_client_unlocked(%struct.necp_fd_data* %6, i32 %7)
  store %struct.necp_client* %8, %struct.necp_client** %5, align 8
  %9 = load %struct.necp_client*, %struct.necp_client** %5, align 8
  %10 = icmp ne %struct.necp_client* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.necp_client*, %struct.necp_client** %5, align 8
  %13 = call i32 @NECP_CLIENT_LOCK(%struct.necp_client* %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load %struct.necp_client*, %struct.necp_client** %5, align 8
  ret %struct.necp_client* %15
}

declare dso_local %struct.necp_client* @necp_client_fd_find_client_unlocked(%struct.necp_fd_data*, i32) #1

declare dso_local i32 @NECP_CLIENT_LOCK(%struct.necp_client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
